--- a/module_25_asynchronous_programming/materials/generators/generator_details.ipynb
+++ b/module_25_asynchronous_programming/materials/generators/generator_details.ipynb
@@ -104,8 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mgen_with_send\u001B[39m() \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[43mGenerator\u001B[49m[\u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;28mint\u001B[39m, \u001B[38;5;28;01mNone\u001B[39;00m]:\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m      3\u001B[0m         item \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01myield\u001B[39;00m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Generator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def gen_with_send() -> Generator[None, int, None]:\n",
     "    while True:\n",
@@ -122,6 +134,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-12-24T10:31:33.387630600Z",
+     "start_time": "2023-12-24T10:31:33.134163Z"
     }
    }
   },
